Cross-app: add 'logo-spinner' - notification page

--- a/libs/notification/src/lib/notification.component.html
+++ b/libs/notification/src/lib/notification.component.html
@@ -12,7 +12,7 @@
 </ng-container>
 <ng-template #loading>
   <article fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner color="primary"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
 <ng-template #empty>
