--- a/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
+++ b/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
@@ -57,7 +57,7 @@
 </section>
 <ng-template #loading>
   <article fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner color="primary"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
 <ng-template #noWishlist>
