--- a/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
+++ b/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
@@ -28,7 +28,7 @@
       <div fxLayout="column" fxLayoutAlign="center center">
         <button class="submit" type="submit" mat-flat-button color="accent" test-id="submit"><ng-content select="[buttonText]"></ng-content></button>
         <a id="tosignup" type="button" color="accent" mat-button routerLink="/auth/identity">
-          <span>Not having an account? </span> 
+          <span>Don't have an account? </span> 
           <span>Sign up here.</span>
         </a>
       </div>
