--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -178,7 +178,7 @@
 
 <ng-template #loading>
   <article fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner color="primary"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
 
