--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -59,6 +59,16 @@
       <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
     </ng-template>
 
+    <ng-template filter label="Release Year" [form]="searchForm.minReleaseYear">
+      <filter-release-year fxLayout="column" [form]="searchForm.minReleaseYear"></filter-release-year>
+    </ng-template>
+
+    <ng-template filter label="Festival Name" [form]="searchForm.festivals">
+      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.festivals"
+        scope="festival">
+      </static-check-boxes>
+    </ng-template>
+
     <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
