--- a/apps/crm/crm/src/app/crm/pages/offers/shell/contract-view/contract-view.component.html
+++ b/apps/crm/crm/src/app/crm/pages/offers/shell/contract-view/contract-view.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="offer$ | async as offer">
-  <a mat-icon-button routerLink="..">
+  <button class="go-back" mat-icon-button routerLink="..">
     <mat-icon svgIcon="arrow_back"></mat-icon>
     <span>BACK TO CONTRACTS</span>
-  </a>
+  </button>
   <ng-container *ngIf="contract$ | async as contract">
     <section class="surface" fxLayout="column" fxLayoutGap="16px">
       <ng-container *ngIf="contract.seller as seller">
