--- a/libs/contract/src/lib/offer/list/list.component.html
+++ b/libs/contract/src/lib/offer/list/list.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="offers else loading">
   <ng-container *ngIf="offers.length else empty">
 
-    <header class="import-header" fxLayout="row" fxLayoutAlign="space-between center">
+    <header fxLayout="row" fxLayoutAlign="space-between center">
       <h1>Offers & Deals</h1>
     </header>
 
