Catalog: add 'logo-spinner' on Offers & Deals page

--- a/libs/contract/src/lib/offer/list/list.component.html
+++ b/libs/contract/src/lib/offer/list/list.component.html
@@ -55,7 +55,7 @@
 </ng-container>
 
 <ng-template #loading>
-  <mat-spinner fxFlexAlign="center"></mat-spinner>
+  <logo-spinner></logo-spinner>
 </ng-template>
 
 <ng-template #empty>
