Cross-app: add 'logo-spinner' on Dashboard page

--- a/libs/ui/src/lib/dashboard/pages/home/home.component.html
+++ b/libs/ui/src/lib/dashboard/pages/home/home.component.html
@@ -62,6 +62,6 @@
 </ng-container>
 <ng-template #loading>
   <article fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner color="primary"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
