Catalog: add 'logo-spinner' on Title page

--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -59,7 +59,7 @@
 </ng-container>
 
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <logo-spinner></logo-spinner>
 </ng-template>
 
 <ng-template #empty>
