Catalog: add 'logo-spinner' on Avails page

--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -46,7 +46,7 @@
 
 <ng-template #loading>
   <section fxLayout fxLayoutAlign="center center">
-    <mat-spinner fxLayoutAlign="center center"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
 
