--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -69,6 +69,12 @@
       </static-check-boxes>
     </ng-template>
 
+    <ng-template filter label="Qualifications" [form]="searchForm.certifications">
+      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.certifications"
+        scope="certifications">
+      </static-check-boxes>
+    </ng-template>
+
     <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
