8693 promo elements opened

--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -172,8 +172,8 @@
   <ng-template colRef="pageView" label="Page views" let-pageView sort>
     {{ pageView ? pageView : '-' }}
   </ng-template>
-  <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
-    {{ videoPlays ? videoPlays : '-' }}
+  <ng-template colRef="promoElementOpened" label="Promo Elements Opened" let-promoElementOpened sort>
+    {{ promoElementOpened ? promoElementOpened : '-' }}
   </ng-template>
   <ng-template colRef="addedToWishlist" label="In wishlist" let-wishlist sort>
     {{ wishlist ? wishlist : '-' }}
