--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -69,8 +69,8 @@
     <ng-template colRef="pageView" label="Views" let-pageView sort>
       {{ pageView }}
     </ng-template>
-    <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
-      {{ videoPlays ? videoPlays : '-' }}
+    <ng-template colRef="promoElementOpened" label="Promo Elements Opened" let-promoElementOpened sort>
+      {{ promoElementOpened ? promoElementOpened : '-' }}
     </ng-template>
     <ng-template colRef="" label="In wishlist" let-item sort>
       {{ inWishlist(item) ? 'Yes' : '-' }}
