--- a/apps/festival/festival/src/app/dashboard/analytics/titles/titles-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/titles/titles-analytics.component.html
@@ -10,8 +10,8 @@
   <ng-template colRef="screenings" label="# Screenings" let-screenings sort>
     {{ screenings }}
   </ng-template>
-  <ng-template colRef="promoReelOpened" label="# Video Plays" let-videoPlays sort>
-    {{ videoPlays }}
+  <ng-template colRef="promoElementOpened" label="# Promo Elements Opened" let-promoElementOpened sort>
+    {{ promoElementOpened }}
   </ng-template>
   <ng-template colRef="addedToWishlist" label="# Wishlist" let-addedToWishlist sort>
     {{ addedToWishlist }}
