--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -115,8 +115,8 @@
             <ng-template colRef="addedToWishlist" label="Titles in Wishlist" let-wishlist sort>
               {{ wishlist }}
             </ng-template>
-            <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
-              {{ videoPlays }}
+            <ng-template colRef="promoElementOpened" label="Promo Elements Opened" let-promoElementOpened sort>
+              {{ promoElementOpened }}
             </ng-template>
             <ng-template colRef="screeningRequested" label="Screening Requests" let-screeningRequested sort>
               {{ screeningRequested }}
