--- a/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
@@ -49,8 +49,8 @@
           {{ keywords | join | maxLength:30 }}
         </span>
       </ng-template>
-      <ng-template colRef="promotional.videos.screener.docId" label="Has Screener" let-title="item">
-        <bf-tag> {{ title.promotional.videos.publicScreener.docId || title.promotional.videos.screener.docId ? 'Yes' : 'No'}} </bf-tag>
+      <ng-template colRef="promotional.videos" label="Has Screener" let-videos>
+        <bf-tag> {{ videos.publicScreener.docId || videos.screener.docId ? 'Yes' : 'No'}} </bf-tag>
       </ng-template>
       <ng-template colRef="poster.docId" label="Has Poster" let-docId>
         <bf-tag> {{ docId ? 'Yes' : 'No'}} </bf-tag>
