7537 chip screening file missing

--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -21,7 +21,7 @@
         </ng-container>
 
         <ng-container *ngIf="missing.video">
-          <mat-chip-list fxLayoutAlign="center center">
+          <mat-chip-list>
             <mat-chip disableRipple>
               <mat-icon svgIcon="warning"></mat-icon>
               <span>Video file missing</span>
