Fix reviews and comments

--- a/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.scss
+++ b/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.scss
@@ -1,5 +1,6 @@
-@import "@angular/flex-layout/mq";
+@import '@angular/flex-layout/mq';
 
+layout-event aside,
 layout-marketplace aside {
   mat-nav-list {
     display: flex;
