--- a/libs/ui/src/lib/layout/marketplace/marketplace.component.scss
+++ b/libs/ui/src/lib/layout/marketplace/marketplace.component.scss
@@ -1,4 +1,4 @@
-@import "@angular/flex-layout/mq";
+@import '@angular/flex-layout/mq';
 
 :host {
   display: flex;
@@ -14,6 +14,10 @@ aside {
   border-right: solid 1px var(--foreground-divider);
   background-color: var(--background-card);
   color: var(--foreground-text);
+
+  &.opened {
+    width: 260px;
+  }
 
   mat-toolbar {
     display: flex;
