--- a/libs/ui/src/lib/layout/event/event.component.scss
+++ b/libs/ui/src/lib/layout/event/event.component.scss
@@ -1,15 +1,41 @@
+@import '@angular/flex-layout/mq';
+
 :host {
-  display: block;
+  display: flex;
+  flex-direction: row;
   height: 100%;
+}
+
+aside {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  border-right: solid 1px var(--foreground-divider);
+  background-color: var(--background-card);
+  color: var(--foreground-text);
+
+  &.opened {
+    width: 260px;
+  }
+
+  mat-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 mat-sidenav-container {
   height: 100%;
 }
 
-mat-sidenav-content {
+#event-content {
   height: 100%;
+  width: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 
   header {
     width: 100%;
@@ -48,4 +74,68 @@ app-bar {
 /* Outline none used to remove the automatic rectangular focus on Safari */
 a[app-logo] {
   outline: none;
+}
+
+@include layout-bp(gt-xs) {
+  a.hide,
+  aside button {
+    display: none;
+  }
+
+  aside {
+    a[app-logo-icon] {
+      display: block;
+    }
+    a[app-logo] {
+      display: none;
+    }
+
+    &.opened {
+      a[app-logo-icon] {
+        display: none;
+      }
+      a[app-logo] {
+        display: block;
+      }
+    }
+  }
+}
+
+@include layout-bp(xs) {
+  mat-divider,
+  auth-widget,
+  a[app-logo-icon],
+  header > a[mat-icon-button] {
+    display: none;
+  }
+
+  aside {
+    transform: translateX(-100%);
+    position: absolute;
+    top: 0;
+    z-index: 8;
+    transition: transform 0.4s;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    
+    &.opened {
+      transform: translateX(0);
+    }
+  }
+
+  .bg-navigation {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0 0 0 / 60%);
+    z-index: 4;
+    left: 0;
+    visibility: visible;
+    transition: 0.4s;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+
+    &.hide {
+      visibility: hidden;
+      background-color: transparent;
+    }
+  }
 }
