--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -82,5 +82,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <logo-spinner></logo-spinner>
+  <article fxLayout="column" fxLayoutAlign="center center">
+    <logo-spinner></logo-spinner>
+  </article> 
 </ng-template>
