--- a/libs/ui/src/lib/rive/logo-spinner.component.html
+++ b/libs/ui/src/lib/rive/logo-spinner.component.html
@@ -1,13 +1,10 @@
-<ng-container *ngIf="app === 'festival'">
-  <canvas riv="archipel-market-logo" width="100" height="100">
-    <riv-animation name="loop_market" play></riv-animation>
-  </canvas>
+<ng-container [ngSwitch]="app">
+    <canvas *ngSwitchCase="'festival'" riv="archipel-market-logo" width="100" height="100">
+      <riv-animation name="loop_market" play></riv-animation>
+    </canvas>
+    <canvas *ngSwitchCase="'catalog'" riv="archipel-content-logo" width="100" height="100">
+      <riv-animation name="loop_content" play></riv-animation>
+    </canvas>
+    <mat-spinner *ngSwitchDefault></mat-spinner>
 </ng-container>
-<ng-container *ngIf="app === 'catalog'">
-  <canvas riv="archipel-content-logo" width="100" height="100">
-    <riv-animation name="loop_content" play></riv-animation>
-  </canvas>
-</ng-container>
-<ng-container *ngIf="app !== 'catalog' && app !== 'festival'">
-  <mat-spinner></mat-spinner>
-</ng-container>
+
