--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -45,9 +45,9 @@
 </section>
 
 <ng-template #loading>
-  <section fxLayout fxLayoutAlign="center center">
+  <article class="spinner">
     <logo-spinner></logo-spinner>
-  </section>
+  </article>
 </ng-template>
 
 <ng-template #noSales>
