--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -82,7 +82,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <article fxLayout="column" fxLayoutAlign="center center">
+  <article class="spinner">
     <logo-spinner></logo-spinner>
-  </article> 
+  </article>
 </ng-template>
