--- a/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
+++ b/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
@@ -56,7 +56,7 @@
   </ng-container>
 </section>
 <ng-template #loading>
-  <article fxLayout="column" fxLayoutAlign="center center">
+  <article class="spinner">
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
