--- a/libs/notification/src/lib/notification.component.html
+++ b/libs/notification/src/lib/notification.component.html
@@ -11,7 +11,7 @@
   </ng-container>
 </ng-container>
 <ng-template #loading>
-  <article fxLayout="column" fxLayoutAlign="center center">
+  <article class="spinner">
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
