--- a/libs/ui/src/lib/dashboard/pages/home/home.component.html
+++ b/libs/ui/src/lib/dashboard/pages/home/home.component.html
@@ -61,7 +61,7 @@
   </ng-template>
 </ng-container>
 <ng-template #loading>
-  <article fxLayout="column" fxLayoutAlign="center center">
+  <article class="spinner">
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
