--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -45,7 +45,7 @@
 </section>
 
 <ng-template #loading>
-  <article class="spinner">
+  <article>
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
