--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -82,7 +82,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <article class="spinner">
+  <article>
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
