--- a/libs/invitation/src/lib/invitation.component.html
+++ b/libs/invitation/src/lib/invitation.component.html
@@ -37,7 +37,7 @@
 </ng-container>
 
 <ng-template #loading>
-  <article class="spinner">
+  <article>
     <logo-spinner></logo-spinner>
   </article>
 </ng-template>
