--- a/libs/user/src/lib/auth/pages/checkPolicyAndTerms/checkPolicyAndTerms.component.html
+++ b/libs/user/src/lib/auth/pages/checkPolicyAndTerms/checkPolicyAndTerms.component.html
@@ -1,9 +1,9 @@
 <a app-logo routerLink="/"></a>
 
-<h1>Almost there!</h1>
+<h1>Privacy Policy and Terms & Conditions Changes</h1>
 <div class="surface">
   <p>
-    Before you access our Application you need to accept our Terms & Conditions and agree with our Privacy Policy
+    Before you access our Application, you need to accept the latest versions of our Terms & Conditions and agree with our Privacy Policy
   </p>
 
   <form [formGroup]="form" (ngSubmit)="accept()">
