--- a/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/title/title.component.html
@@ -1,4 +1,53 @@
 <h2>Line-up</h2>
+<list-filter>
+
+  <ng-template filter label="Release Year" [form]="minReleaseYear">
+    <filter-release-year fxLayout="column" [form]="minReleaseYear"></filter-release-year>
+  </ng-template>
+
+  <ng-template filter label="Genre" [form]="genres">
+    <chips-autocomplete [form]="genres" scope="genres">
+      <mat-label>Genres</mat-label>
+    </chips-autocomplete>
+  </ng-template>
+
+  <ng-template filter label="Country of Origin" [form]="originCountries">
+    <chips-autocomplete [form]="originCountries" placeholder="Country of Origin" scope="territories">
+      <mat-label>Type and select Country</mat-label>
+    </chips-autocomplete>
+  </ng-template>
+
+  <ng-template filter label="Festival Name" [form]="festivals">
+    <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="festivals"
+      scope="festival">
+    </static-check-boxes>
+  </ng-template>
+
+  <ng-template filter label="Language & Version" [form]="languages">
+    <title-language-filter [form]="languages"></title-language-filter>
+  </ng-template>
+
+  <ng-template filter label="Production Status" [form]="productionStatus">
+    <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="productionStatus"
+      scope="productionStatus">
+    </static-check-boxes>
+  </ng-template>
+
+  <ng-template filter label="Qualifications" [form]="certifications">
+    <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="certifications"
+      scope="certifications">
+    </static-check-boxes>
+  </ng-template>
+
+  <ng-template filter label="Budget" [form]="minBudget">
+    <filter-budget fxLayout="column" [form]="minBudget"></filter-budget>
+  </ng-template>
+
+  <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
+    <mat-icon svgIcon="refresh_filters"></mat-icon>
+    <span>Clear Filters</span>
+  </button>
+</list-filter>
 <section fxLayout="row wrap" fxLayoutGap="24px grid">
   <ng-container *ngFor="let title of titles$ | async; trackBy: trackById">
     <movie-card [movie]="title" [link]="['../../../title', title.id]" size="poster">
