--- a/libs/movie/src/lib/movie/marketplace/main/main.component.html
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.html
@@ -2,9 +2,9 @@
 
   <h2>Main Information</h2>
 
-  <section class="mains-information">
-    <article class="video" *ngIf="showOneVideo(movie) as video">
-      <video-viewer [ref]="video" *ngIf="video.jwPlayerId" (stateChange)="videoStateChanged(movie, $event)"></video-viewer>
+  <section class="main-information">
+    <article class="video" *ngIf="getMainVideo(movie) as video">
+      <video-viewer [ref]="video" (stateChange)="videoStateChanged(movie, $event)"></video-viewer>
     </article>
     <article *ngIf="movie.synopsis">
       <h5>Synopsis</h5>
