Title page - Videos displayed higher (#8827)
* display video higher on title page

* fix review

* fix review

* fix review

Co-authored-by: kevin-m <kmarais@cascadae8.com>

--- a/libs/movie/src/lib/movie/marketplace/main/main.component.html
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.html
@@ -1,18 +1,16 @@
 <ng-container *ngIf="(movie$ | async) as movie;" test-id="content">
 
   <h2>Main Information</h2>
-  <!-- Sales Pitch -->
-  <ng-container *ngIf="showSalesPitch(movie)">
-    <section id="sales-pitch" *ngIf="movie.promotional.videos.salesPitch as salesPitch">
-      <h3>Sales Pitch</h3>
-      <article fxLayout="row" fxLayoutGap="40px">
-        <video-viewer [ref]="salesPitch" *ngIf="salesPitch.jwPlayerId" (stateChange)="videoStateChanged(movie, $event)"></video-viewer>
-        <p *ngIf="salesPitch.description">{{ salesPitch.description }}</p>
-      </article>
-      <mat-divider></mat-divider>
-    </section>
-  </ng-container>
 
+  <section class="main-information">
+    <article class="video" *ngIf="getMainVideo(movie) as video">
+      <video-viewer [ref]="video" (stateChange)="videoStateChanged(movie, $event)"></video-viewer>
+    </article>
+    <article *ngIf="movie.synopsis">
+      <h5>Synopsis</h5>
+      <p>{{ movie.synopsis }}</p>
+    </article>
+  </section>  
 
   <!-- Storyline Information -->
   <section *ngIf="movie | hasKeys: keys.main">
@@ -20,11 +18,6 @@
     <article *ngIf="movie.logline">
       <h5>Logline</h5>
       <p>{{ movie.logline }}</p>
-    </article>
-
-    <article *ngIf="movie.synopsis">
-      <h5>Synopsis</h5>
-      <p>{{ movie.synopsis }}</p>
     </article>
 
     <article *ngIf="movie.keywords.length">
