--- a/libs/movie/src/lib/movie/marketplace/main/main.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.scss
@@ -22,18 +22,18 @@ h5 {
   text-transform: uppercase;
 }
 
-
-#sales-pitch {
+.main-information {
+  display: flex;
   .video {
-    width: 30%;
-  }
-  p {
-    width: 50%;
+    padding-right: 32px;
   }
 }
 
 @include layout-bp(lt-md) {
   video-viewer {
     width: 100%;
+  }
+  .main-information {
+    flex-direction: column;
   }
 }
