--- a/libs/ui/src/lib/layout/event/event.component.scss
+++ b/libs/ui/src/lib/layout/event/event.component.scss
@@ -15,10 +15,6 @@ aside {
   background-color: var(--background-card);
   color: var(--foreground-text);
 
-  &.opened {
-    width: 260px;
-  }
-
   mat-toolbar {
     display: flex;
     justify-content: space-between;
@@ -137,5 +133,12 @@ a[app-logo] {
       visibility: hidden;
       background-color: transparent;
     }
+  }
+}
+
+@include layout-bp(lt-sm) {
+  mat-divider,
+  auth-widget {
+    display: none;
   }
 }
