--- a/apps/catalog/catalog/src/app/marketplace/marketplace.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/marketplace.component.scss
@@ -1,14 +1,21 @@
 @use '@angular/material' as mat;
-@import "@angular/flex-layout/mq";
+@import '@angular/flex-layout/mq';
 
 layout-marketplace {
   display: block;
   height: 100%;
 
   aside {
-    mat-nav-list {
-      display: flex;
-      flex-direction: column;
+    &.opened mat-nav-list {
+      width: 260px;
+    }
+  
+    @include layout-bp(gt-sm) {
+      &:not(.opened) {
+        .mat-list-base .mat-list-item .mat-list-text {
+          display: none;
+        }
+      }
     }
   
     @include layout-bp(gt-xs) {
@@ -16,22 +23,14 @@ layout-marketplace {
       &.opened auth-sidenav {
         display: none;
       }
-  
-      &:not(.opened) {
-        .mat-list-base .mat-list-item .mat-list-text {
-          display: none;
-        }
-      }
     }
 
   }
 
   header {
     display: flex;
-    flex: 1;
     justify-content: flex-end;
     align-items: center;
-    align-content: center;
     
     header {
       margin-inline: 24px;
