--- a/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.scss
+++ b/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.scss
@@ -2,21 +2,22 @@
 
 layout-event aside,
 layout-marketplace aside {
-  mat-nav-list {
-    display: flex;
-    flex-direction: column;
+  &.opened mat-nav-list {
+    width: 260px;
+  }
+
+  @include layout-bp(gt-sm) {
+    &:not(.opened) {
+      .mat-list-base .mat-list-item .mat-list-text {
+        display: none;
+      }
+    }
   }
 
   @include layout-bp(gt-xs) {
     &:not(.opened) auth-sidenav,
     &.opened auth-sidenav {
       display: none;
-    }
-
-    &:not(.opened) {
-      .mat-list-base .mat-list-item .mat-list-text {
-        display: none;
-      }
     }
   }
 }
