--- a/apps/financiers/financiers/src/app/marketplace/marketplace.component.scss
+++ b/apps/financiers/financiers/src/app/marketplace/marketplace.component.scss
@@ -2,16 +2,22 @@
 
 layout-marketplace {
   aside {
-    @include layout-bp(gt-xs) {
-      &:not(.opened) auth-sidenav,
-      &.opened auth-sidenav {
-        display: none;
-      }
+    &.opened mat-nav-list {
+      width: 260px;
+    }
   
+    @include layout-bp(gt-sm) {
       &:not(.opened) {
         .mat-list-base .mat-list-item .mat-list-text {
           display: none;
         }
+      }
+    }
+  
+    @include layout-bp(gt-xs) {
+      &:not(.opened) auth-sidenav,
+      &.opened auth-sidenav {
+        display: none;
       }
     }
   }
